--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div></header> 
     <section class="u-align-right u-clearfix u-image u-shading u-section-1" id="sec-2e45">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-left u-custom-font u-font-oswald u-text u-text-body-alt-color u-text-1">Mobile App Development</h1>
+        <h1 class="u-align-left u-custom-font u-font-oswald u-text u-text-body-alt-color u-text-1">sito in costruzione</h1>
         <p class="u-align-left u-text u-text-body-alt-color u-text-2">Image from <a href="https://www.freepik.com/photos/business" class="u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1">Freepik</a>
         </p>
         <div class="u-list u-list-1">
@@ -446,16 +446,6 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-60e0"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
-        <span>HTML Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/html-website-builder" target="_blank">
-        <span>HTML Designer</span>
-      </a>. 
-    </section>
+    
   
 </body></html>
